<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/login_edit_text_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_text_email"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_edit_text_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_text_username"
        android:inputType="text" />

    <EditText
        android:id="@+id/login_edit_text_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_text_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/login_edit_text_second_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_edit_text_second_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_user_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_button"/>

</LinearLayout>
