<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <EditText
        android:id="@+id/bike_edit_text_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bike_edit_text_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/bike_edit_text_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bike_edit_text_type"
        android:inputType="text" />

    <EditText
        android:id="@+id/bike_edit_text_wheel_size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bike_edit_text_wheel_size"
        android:inputType="number" />

    <Button
        android:id="@+id/bike_button_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/edit_button"/>



</LinearLayout>